# Self-evolving-agent

./: .env  .env.example  .gitignore  CLEANUP_SUMMARY.md  CODEBASE_STRUCTURE.md  EVALUATION_RUN_LOG.md  GSM8K_DATASET_SETUP.md  GSM8K_eval.py  INTEGRATION_SUMMARY.md  MERGE_ANALYSIS.md  README.md  TOOL_CREATION_GUIDE.md  TOOL_CREATION_QUICKSTART.md  config.yaml  convert_gsm8k_to_csv.py  dummy.py  dummy2.py  gsm8k_eval_with_calculator.py  math500_eval.py  pyproject.toml  sea_agent.py  sea_agent_math500.py  test.ipynb  test_tool_loading.py  testing_sea.py
agent/: google_agent.py  phi_agent.py  tools.py
atc_results/: example_trace.json  real_traces_test.json  test_basic.json  test_run.json  test_with_specs.json
data/: README.md  train.csv
demos/: basic_inference.py  langchain_calculator_demo.py  test_tool_calling.py  wb_inference_demo.py
docs/: CRITIC_TUNER_SYSTEM.md  PHASE4_IMPLEMENTATION.md  REMAINING_TASKS.md  automatic_tool_creation_engine.md
eval_results/: GSM8K_Phi_Agent_Phi_4mini_3.8B_Agent.txt  GSM8K_Phi_LLM_Phi_4mini_3.8B_LLM.txt  MATH500_Phi_LLM_Phi_4mini_3.8B_LLM.txt  SEA_Agent_20251012_075851_SEA_Agent.txt  SEA_Agent_20251012_080444_SEA_Agent.txt  SEA_Agent_20251012_081644_SEA_Agent.txt  SEA_Agent_20251012_100622_SEA_Agent.txt  SEA_Agent_20251012_101407_SEA_Agent.txt  SEA_Agent_20251012_101808_SEA_Agent.txt  SEA_Agent_20251012_105232_SEA_Agent.txt  SEA_Agent_20251012_110542_SEA_Agent.txt  SEA_Agent_20251012_114459_SEA_Agent.txt  SEA_Agent_20251012_120646_SEA_Agent.txt  SEA_Agent_20251012_123420_SEA_Agent.txt  gsm8k_basic_test_basic_google_llm.txt  (+8 more)
(+112 files in other folders)
